[gd_scene load_steps=16 format=2]

[ext_resource path="res://views/fps.gd" type="Script" id=1]
[ext_resource path="res://doodads/RTS-Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Audio.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/controllers/star_system_controller.gd" type="Script" id=5]
[ext_resource path="res://actors/star_system/StarSystem.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/controllers/player_controller.gd" type="Script" id=7]
[ext_resource path="res://actors/fleet/Fleet.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/controllers/event_controller.gd" type="Script" id=9]
[ext_resource path="res://scenes/UI/EventPopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/themes/anneke.tres" type="Theme" id=11]
[ext_resource path="res://views/resources.gd" type="Script" id=12]
[ext_resource path="res://scenes/Hookpoint.tscn" type="PackedScene" id=13]
[ext_resource path="res://doodads/BackgroundParallax.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/main_menu.tscn" type="PackedScene" id=15]

[node name="Node2D" type="Node2D"]

[node name="BackgroundParallax" parent="." instance=ExtResource( 14 )]

[node name="RTS-Camera2D" parent="." instance=ExtResource( 2 )]

[node name="UIRoot" type="CanvasLayer" parent="."]

[node name="EventPopup" parent="UIRoot" instance=ExtResource( 10 )]
visible = false

[node name="Resources" type="MarginContainer" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -346.0
margin_bottom = 54.0
grow_horizontal = 0
size_flags_horizontal = 4
theme = ExtResource( 11 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UIRoot/Resources"]
margin_top = 20.0
margin_right = 326.0
margin_bottom = 54.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UIRoot/Resources/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 27.0
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="Supplies" type="Label" parent="UIRoot/Resources/PanelContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 20.0
text = "Supplies: 12"

[node name="Credits" type="Label" parent="UIRoot/Resources/PanelContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 214.0
margin_bottom = 20.0
text = "Credits: 10"

[node name="Fuel" type="Label" parent="UIRoot/Resources/PanelContainer/HBoxContainer"]
margin_left = 234.0
margin_right = 312.0
margin_bottom = 20.0
text = "Fuel: 100"

[node name="FancyMM" parent="UIRoot" instance=ExtResource( 15 )]

[node name="FPS" type="MarginContainer" parent="UIRoot"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIRoot/FPS"]
margin_left = 10.0
margin_top = 13.0
margin_right = 82.0
margin_bottom = 37.0
text = "144 FPS"
script = ExtResource( 1 )

[node name="StarSystemController" type="Node" parent="."]
script = ExtResource( 5 )
star_system_actor = ExtResource( 6 )

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 7 )
_fleet_actor = ExtResource( 8 )

[node name="EventController" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Systems" type="Node2D" parent="."]

[node name="Fleets" type="Node2D" parent="."]

[node name="ServerHook" parent="." instance=ExtResource( 13 )]

[node name="ResourceTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Audio" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="ResourceTimer" to="PlayerController" method="_on_ResourceTimer_timeout"]
